[gd_scene load_steps=5 format=2]

[ext_resource path="res://Action RPG Resources/UI/Health/HealthBar_under.png" type="Texture" id=1]
[ext_resource path="res://Action RPG Resources/UI/Health/HealthBar_progress.png" type="Texture" id=2]
[ext_resource path="res://Action RPG Resources/UI/Health/HealthBar_over2.png" type="Texture" id=3]
[ext_resource path="res://DamageDisplay.gd" type="Script" id=4]

[node name="HealthDisplay" type="Node2D"]
script = ExtResource( 4 )

[node name="HealthUnder" type="TextureProgress" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -24.0
margin_right = 16.0
margin_bottom = -16.0
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.682353, 0.105882, 0.309804, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HealthOver" type="TextureProgress" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -16.0
margin_top = -24.0
margin_right = 16.0
margin_bottom = -16.0
value = 100.0
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.0392157, 0.596078, 0.215686, 1 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FlashTween" type="Tween" parent="."]

[node name="UpdateTween" type="Tween" parent="."]
